--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,10 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/d7afa79581.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React App</title>
   </head>
   <body>
