--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Homepage for Coby Eastwood, professional Software Developer and life long learner."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/d7afa79581.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Coby Eastwood</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
