--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/cosmo/bootstrap.min.css"
+    />
     <script
       src="https://kit.fontawesome.com/d7afa79581.js"
       crossorigin="anonymous"
