--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 		/>
 		<link
 			rel="stylesheet"
-			href="https://bootswatch.com/5/quartz/bootstrap.min.css"
+			href="https://bootswatch.com/4/flatly/bootstrap.min.css"
 		/>
 		<script
 			src="https://kit.fontawesome.com/d7afa79581.js"
